[package]
name = "snarkos_network_testing"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2018"

[dependencies]
pea2pea = "0.27"
snarkos-network = { git = "https://github.com/AleoHQ/snarkOS", branch = "staging" }

async-trait = "0.1"
bytes = "1"
capnp = "0.14"
chrono = "0.4"
once_cell = "1"
parking_lot = "0.11"
rand = { version = "0.8", features = ["small_rng"] }
snow = { version = "0.7", default-features = false, features = ["libsodium-resolver", "chacha20poly1305", "blake2", "sha2", "x25519-dalek", "rand"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "sync"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.2", features = ["ansi", "chrono", "env-filter", "fmt", "parking_lot", "smallvec"] }
